Add Supabase integration and update requirements; remove migration script

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ questoes.db
 # OS / editor
 .DS_Store
 .vscode/
+
+# Ignore environment files
+.env
+.venv/
+env/
+venv/
+
+./streamlit/secrets.toml
